Try to fix alignment of role dot with text

--- a/quotes/user-popups.css
+++ b/quotes/user-popups.css
@@ -86,7 +86,7 @@
     margin-right: 1px;
     background-color: currentColor;
     display: inline-block;
-    vertical-align: text-top;
+    vertical-align: text-bottom;
 }
 
 .popup_body>[class*="role_"] {
